<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="#000000">

    <!-- 输出路径标签 -->
    <TextView
        android:id="@+id/tv_output_path_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Selecting_parameter1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 输出路径输入框 -->
    <EditText
        android:id="@+id/et_output_path"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input_bar"
        android:hint="/storage/emulated/0/Download/output.mp4"
        android:inputType="textUri"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        android:imeOptions="actionDone"
        android:text="/storage/emulated/0/Download/output.mp4"
        android:textColor="@color/text_console"
        android:textColorHint="@color/text_hint"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_output_path_label" />

    <!-- 视频编码器分组 -->
    <LinearLayout
        android:id="@+id/video_codec_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_output_path">
        <TextView
            android:id="@+id/tv_video_codec_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Selecting_videoEncoderLabel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Spinner
            android:popupBackground="@android:color/black"
            android:id="@+id/spinner_video_codec"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_bar"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
    </LinearLayout>

    <!-- 音频编码器分组 -->
    <LinearLayout
        android:id="@+id/audio_codec_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_codec_group">
        <TextView
            android:id="@+id/tv_audio_codec_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/Selecting_audioEncoderLabel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Spinner
            android:popupBackground="@android:color/black"
            android:id="@+id/spinner_audio_codec"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_bar"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
